workloads/argocd/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: true
    service.beta.kubernetes.io/do-loadbalancer-name: "personal"
    service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: true
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: true
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
